--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kokkoro-plugin-group",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "群管理，时不时来塞口球",
   "main": "./lib/index.js",
   "scripts": {
@@ -21,9 +21,10 @@
   "homepage": "https://github.com/kokkorojs/kokkoro-plugin-group#readme",
   "devDependencies": {
     "@types/node": "^17.0.21",
-    "kokkoro": "^0.2.0"
+    "kokkoro": "^0.2.5"
   },
   "files": [
-    "lib"
+    "lib",
+    "image"
   ]
 }
