--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "kokkoro-plugin-group",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "description": "群管理，时不时来塞口球",
-  "main": "./lib/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,15 +13,15 @@
   "keywords": [
     "kokkoro"
   ],
-  "author": "yuki",
+  "author": "yuki <mail@yuki.sh>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/kokkorojs/kokkoro-plugin-group/issues"
   },
   "homepage": "https://github.com/kokkorojs/kokkoro-plugin-group#readme",
   "devDependencies": {
-    "@types/node": "^17.0.23",
-    "kokkoro": "^0.3.0"
+    "@types/node": "^18.11.9",
+    "kokkoro": "^1.1.0"
   },
   "files": [
     "lib",
