--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kokkoro-plugin-group",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "群管理，时不时来塞口球",
   "main": "lib/index.js",
   "scripts": {
@@ -20,8 +20,9 @@
   },
   "homepage": "https://github.com/kokkorojs/kokkoro-plugin-group#readme",
   "devDependencies": {
-    "@types/node": "^18.11.19",
-    "kokkoro": "^2.0.0-alpha.1"
+    "@kokkoro/core": "^2.0.1",
+    "@types/node": "^18.14.0",
+    "amesu": "^1.3.0"
   },
   "files": [
     "lib",
